# picoview

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml  workflow.sh
.github/workflows/: check-build.yml  check.yml
examples/: embedded.rs  opengl.rs  simple.rs  transient.rs
examples/clack-gain/: Cargo.toml
examples/clack-gain/src/: gui.rs  lib.rs  params.rs
examples/softbuffer/: Cargo.toml
examples/softbuffer/src/: main.rs
src/: data.rs  error.rs  graphics.rs  lib.rs  opengl.rs  window.rs
src/platform/: mod.rs
src/platform/mac/: display.rs  gl.rs  mod.rs  util.rs  view.rs
src/platform/none/: mod.rs
src/platform/win/: connection.rs  cursor.rs  dnd.rs  event_loop.rs  gl.rs  hook.rs  mod.rs  pacer.rs  shared.rs  util.rs  vsync.rs  window.rs  window_hook.rs  window_main.rs
src/platform/win/util/: cursor.rs  dpi.rs  error.rs  exchange.rs  keyboard.rs  mod.rs  vsync.rs  wgl.rs  widestr.rs  window.rs
src/platform/x11/: connection.rs  cursor.rs  event_loop.rs  gl.rs  keyboard.rs  mod.rs  util.rs  window.rs
src/platform/x11/util/: connection.rs  cursor.rs  info.rs  input.rs  visual.rs
tests/: startup.rs  startup_embed.rs  startup_transient.rs  startup_window.rs
