[package]
name = "picoview"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
raw-window-handle = "0.6"

[target.'cfg(target_os="linux")'.dependencies]
nix = { version = "0.27", features = ["poll"] }
x11 = { version = "2.21", features = ["xlib_xcb"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "cursor", "present", "dri3"] }

[target.'cfg(target_os="windows")'.dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
libloading = "0.8"
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
]}