[package]
name = "picoview"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.6.0"
raw-window-handle = "0.6.2"

[target.'cfg(target_os="linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "glx", "xcursor", "xrandr"] }
libc = "0.2"

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"
objc2 = { version = "0.6", features = ["verify"], default-features = false }
objc2-foundation = { version = "0.3", features = ["NSThread", "NSOperation"], default-features = false }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop"], default-features = false }
objc2-core-video = { version = "0.3", features = ["CVBase", "CVReturn", "CVDisplayLink", "objc2"], default-features = false }
objc2-core-graphics = { version = "0.3", features = ["CGError", "CGRemoteOperation"], default-features = false  }
objc2-app-kit = { version = "0.3", features = [
    "NSGraphics", 
    "NSDirection", 
    "NSApplication", 
    "NSRunningApplication",
    "NSView", 
    "NSWindow", 
    "NSResponder", 
    "NSCursor", 
    "NSDragging", 
    "NSEvent", 
    "NSPasteboard", 
    "NSPasteboardItem", 
    "NSScreen", 
    "NSTrackingArea",
    "objc2-core-foundation",
], default-features = false }
[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader"
]}
