[package]
name = "picoview-example-clack-gain"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
picoview = { path = "../.." }

clack-plugin = { git = "https://github.com/Quant1um/clack", rev = "6fd151fa28be30eefbcfb156b2a8e978797d0db2" }
clack-extensions = { git = "https://github.com/Quant1um/clack", rev = "6fd151fa28be30eefbcfb156b2a8e978797d0db2", features = [
    "audio-ports",
    "clack-plugin",
    "gui",
    "note-ports",
    "params",
    "raw-window-handle_06",
    "state",
] }

