[package]
name = "picoview-example-clack-gain"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
picoview = { path = "../.." }

clack-plugin = "0.1.0"
clack-extensions = { version = "0.1.0", features = [
    "audio-ports",
    "clack-plugin",
    "gui",
    "note-ports",
    "params",
    "raw-window-handle_06",
    "state",
] }

